--- a/second/csss/style.css
+++ b/second/csss/style.css
@@ -1,3 +1,19 @@
+.pagination {
+    display: flex;
+    justify-content: center;
+}
+
+.pagination_list {
+    display: flex;
+    list-style-type: none;
+}
+
+.pagination_item {
+    padding: 8px;
+    margin: 8px;
+    cursor: pointer;
+}
+
 .top-nav {
     background-color: #faf0e6;
     color: white;
@@ -6,37 +22,68 @@
 
 }
 
+.hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
 .to {
     display: inline-flex;
     flex-direction: row;
-     padding: 20px;
+    padding: 20px;
     margin-right: 10px;
 }
 
 .about {
-display: flex;
-
+    display: flex;
     flex-direction: row;
-
     justify-content: flex-start;
-
     padding: 20px;
     margin-right: 10px;
 }
 
 
 #waybillTable {
-  border-collapse: collapse;
+    border-collapse: collapse;
 }
 
 #waybillTable th, #waybillTable td {
-  border: 1px solid black;
-  padding: 8px;
-  text-align: center;
+    border: 1px solid black;
+    padding: 8px;
+    text-align: center;
+}
+
+#waybillTable tbody tr {
+    display: table-row;
+}
+
+#passportTable {
+    border-collapse: collapse;
+}
+
+#passportTable th, #passportTable td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: center;
+}
+
+#nomTable {
+    border-collapse: collapse;
+}
+
+#nomTable th, #nomTable td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: center;
 }
 
 Button{
-   background-color: #f0b7a4;
+    background-color: #f0b7a4;
     color: #fff;
     padding: 5px 10px;
     border: none;
@@ -51,8 +98,8 @@ Button{
     margin-right: 30px;
 }
 
-.bud{
-   background-color: #f0b7a4;
+.budu{
+    background-color: #f0b7a4;
     color: #fff;
     padding: 5px 10px;
     border: none;
@@ -73,26 +120,26 @@ body {
 }
 
 table {
-width: 100%;
-margin-bottom: 18px; /*Отступ снизу от таблицы*/
-padding: 0; /*Отступы внутри таблицы*/
-font-size: 13px; /*Размер шрифта*/
-border: 1px solid #dddddd; /*Граница таблицы*/
-border-spacing: 0; /*Отступы между границами ячеек*/
-border-collapse: separate; /*Границы ячеек не склеиваются*/
--webkit-border-radius: 5px; /*Радиус скругления углов у таблицы Safari, Chrome*/
--moz-border-radius: 10px; /*Радиус скругления углов у таблицы Mozilla*/
-border-radius: 5px; /*Радиус скругления углов у таблицы*/
-color: #666666; /*Цвет текста в таблице*/
-font-family: Arial; /*Семейство шрифтов*/
+    width: 100%;
+    margin-bottom: 18px; /*Отступ снизу от таблицы*/
+    padding: 0; /*Отступы внутри таблицы*/
+    font-size: 13px; /*Размер шрифта*/
+    border: 1px solid #dddddd; /*Граница таблицы*/
+    border-spacing: 0; /*Отступы между границами ячеек*/
+    border-collapse: separate; /*Границы ячеек не склеиваются*/
+    -webkit-border-radius: 5px; /*Радиус скругления углов у таблицы Safari, Chrome*/
+    -moz-border-radius: 10px; /*Радиус скругления углов у таблицы Mozilla*/
+    border-radius: 5px; /*Радиус скругления углов у таблицы*/
+    color: #666666; /*Цвет текста в таблице*/
+    font-family: Arial; /*Семейство шрифтов*/
 }
 
 table, th, td {
  /* border: 1px solid black;*/
 
-     padding: 10px 10px 9px; /*Отступы внутри ячеек*/
- line-height: 18px; /*Межстрочный интервал*/
- text-align: left; /*Выравнивание текста по левому краю*/
+    padding: 10px 10px 9px; /*Отступы внутри ячеек*/
+    line-height: 18px; /*Межстрочный интервал*/
+    text-align: left; /*Выравнивание текста по левому краю*/
 }
 
 table th {
@@ -137,6 +184,7 @@ table tbody tr:last-child td:last-child {
     border-radius: 0 0 5px 0;
 }
 
-table tr:hover {
+
+tr.content:hover {
     background-color: peachpuff;
 }
