--- a/second/css/passnom.css
+++ b/second/css/passnom.css
@@ -1,24 +1,9 @@
-.pagination {
-    display: flex;
-    justify-content: center;
-}
-
-.pagination_list {
-    display: flex;
-    list-style-type: none;
-}
-
-.pagination_item {
-    padding: 8px;
-    margin: 8px;
-    cursor: pointer;
-}
-
 .top-nav {
-    background-color: #faf0e6;
-    color: white;
+    background-color: #e0bce3d7;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     text-align: center;
-    padding: 10px;
 
 }
 
@@ -83,40 +68,18 @@
 }
 
 Button{
-    background-color: #f0b7a4;
-    color: #fff;
-    padding: 5px 10px;
-    border: none;
-    border-radius: 5px;
+   background-color: #d4f5ffd7; /* светло-розовый */
+    color: black;
+    border: 3px solid #59d3e3d7; /* темно-розовый */
+    padding: 8px 16px;
+    border-radius: 4px;
     cursor: pointer;
-    width: 200px;
-    height: 70px;
-    margin: 20px auto;
-    font: normal 17px arial;
-    transition: .2s linear;
-    box-shadow: 0 0 0 2px white, 0 0 0 4px #f0b7a4;
     margin-right: 30px;
-}
 
-.budu{
-    background-color: #f0b7a4;
-    color: #fff;
-    padding: 5px 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    width: 100px;
-    height: 40px;
-    margin: 20px auto;
-    font: normal 17px arial;
-    transition: .2s linear;
-    box-shadow: 0 0 0 2px white, 0 0 0 4px #f0b7a4;
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    color: #333;
+    background-color: #f2dcf2d7;
 }
 
 table {
@@ -132,9 +95,14 @@ table {
     border-radius: 5px; /*Радиус скругления углов у таблицы*/
     color: #666666; /*Цвет текста в таблице*/
     font-family: Arial; /*Семейство шрифтов*/
+    background-color: #fadefcd7;
 }
 
-table, th, td {
+th {
+    font-weight: bold;
+}
+
+table,  td {
  /* border: 1px solid black;*/
 
     padding: 10px 10px 9px; /*Отступы внутри ячеек*/
@@ -186,5 +154,22 @@ table tbody tr:last-child td:last-child {
 
 
 tr.content:hover {
-    background-color: peachpuff;
+    background-color: #f2d0f1d7;
+}
+
+#passportTable {
+    display: none;
+}
+
+#out {
+    float: left;
+    width: 100%; /* Ширина контейнера для первой таблицы */
+
+
+}
+
+#out2 {
+    float: left;
+    width: 100%; /* Ширина контейнера для второй таблицы */
+
 }
