--- a/second/css/style.css
+++ b/second/css/style.css
@@ -1,32 +1,56 @@
-.top-nav {
-    background-color: #faf0e6;
-    color: white;
+.pagination {
+    display: flex;
+    justify-content: center;
+}
+
+.pagination_list {
+    display: flex;
+    list-style-type: none;
+}
+
+.pagination_item {
+    padding: 8px;
+    margin: 8px;
+    cursor: pointer;
+}
+
+#pagination-button {
+    background-color: #d4f5ffd7; /* средний розовый */
+    color: black; /* темно-розовый */
+    border: 1px solid #8a60fcd7; /* темно-розовый */
+    padding: 6px 12px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.pagination-button:hover {
+    background-color: #a8eef7d7; /* светло-розовый */
+}
+
+header {
+     color: black; /* темно-розовый */
     text-align: center;
-    padding: 10px;
-
+    font-size: xx-large;
+    font-weight: bold;
 }
 
-#out {
-    float: left;
-    width: 100%; /* Ширина контейнера для первой таблицы */
-
-
-}
-
-#out2 {
-    float: left;
-    width: 100%; /* Ширина контейнера для второй таблицы */
+.top-nav {
+    background-color: #e9ccedd7;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    text-align: center;
 
 }
 
 .hidden {
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
 
 .to {
@@ -35,7 +59,6 @@
     padding: 20px;
     margin-right: 10px;
 }
-
 
 .about {
     display: flex;
@@ -56,6 +79,10 @@
     text-align: center;
 }
 
+#waybillTable tbody tr {
+    display: table-row;
+}
+
 #passportTable {
     border-collapse: collapse;
 }
@@ -65,7 +92,6 @@
     padding: 8px;
     text-align: center;
 }
-
 
 #nomTable {
     border-collapse: collapse;
@@ -77,66 +103,58 @@
     text-align: center;
 }
 
-
-Button {
-    background-color: #f0b7a4;
-    color: #fff;
-    padding: 5px 10px;
-    border: none;
-    border-radius: 5px;
+Button{
+   background-color: #d4f5ffd7; /* светло-розовый */
+    color: black;
+    border: 3px solid #59d3e3d7; /* темно-розовый */
+    padding: 8px 16px;
+    border-radius: 4px;
     cursor: pointer;
-    width: 200px;
-    height: 70px;
-    margin: 20px auto;
-    font: normal 17px arial;
-    transition: .2s linear;
-    box-shadow: 0 0 0 2px white, 0 0 0 4px #f0b7a4;
     margin-right: 30px;
+
 }
 
-.bud {
-    background-color: #f0b7a4;
-    color: #fff;
-    padding: 5px 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    width: 100px;
-    height: 40px;
-    margin: 20px auto;
-    font: normal 17px arial;
-    transition: .2s linear;
-    box-shadow: 0 0 0 2px white, 0 0 0 4px #f0b7a4;
-}
+/*.budu{*/
+/*    background-color: #f0b7a4;*/
+/*    color: #fff;*/
+/*    padding: 5px 10px;*/
+/*    border: none;*/
+/*    border-radius: 5px;*/
+/*    cursor: pointer;*/
+/*    width: 100px;*/
+/*    height: 40px;*/
+/*    margin: 20px auto;*/
+/*    font: normal 17px arial;*/
+/*    transition: .2s linear;*/
+/*    box-shadow: 0 0 0 2px white, 0 0 0 4px #f0b7a4;*/
+/*}*/
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    color: #333;
+    background-color: #f2dcf2d7;
 }
 
 table {
     width: 100%;
     margin-bottom: 18px; /*Отступ снизу от таблицы*/
     padding: 0; /*Отступы внутри таблицы*/
-    font-size: 13px; /*Размер шрифта*/
-    border: 1px solid #dddddd; /*Граница таблицы*/
+    font-size: 15px; /*Размер шрифта*/
+    border: 2px solid black; /*Граница таблицы*/
     border-spacing: 0; /*Отступы между границами ячеек*/
     border-collapse: separate; /*Границы ячеек не склеиваются*/
     -webkit-border-radius: 5px; /*Радиус скругления углов у таблицы Safari, Chrome*/
     -moz-border-radius: 10px; /*Радиус скругления углов у таблицы Mozilla*/
     border-radius: 5px; /*Радиус скругления углов у таблицы*/
-    color: #666666; /*Цвет текста в таблице*/
+    color: black; /*Цвет текста в таблице*/
     font-family: Arial; /*Семейство шрифтов*/
-    display: inline-block;
-    margin-right: 5px; /* Расстояние между таблицами */
-    width: 100%;
-
-
+    background-color: #fadefcd7;
 }
 
-table, th, td {
-    /* border: 1px solid black;*/
+th {
+    font-weight: bold;
+}
+
+table,  td {
+ /* border: 1px solid black;*/
 
     padding: 10px 10px 9px; /*Отступы внутри ячеек*/
     line-height: 18px; /*Межстрочный интервал*/
@@ -155,26 +173,25 @@ table td {
     border-top: 1px solid #ddd; /*Верхняя граница ячейки*/
 }
 
-table th + th, table td + td, table th + td {
+table th+th,table td+td,table th+td {
     border-left: 1px solid #ddd; /*Стиль для левой границы между двумя ячейками*/
 }
 
 table thead tr:first-child th:first-child, /*Первая строка первая ячейка в заголовке таблицы*/
-table tbody tr:first-child td:first-child /*Первая строка первая ячейка в теле таблицы*/
-{
+table tbody tr:first-child td:first-child /*Первая строка первая ячейка в теле таблицы*/{
     -webkit-border-radius: 5px 0 0 0;
     -moz-border-radius: 5px 0 0 0;
     border-radius: 5px 0 0 0;
 }
 
 table thead tr:first-child th:last-child,
-table tbody tr:first-child td:last-child {
+table tbody tr:first-child td:last-child  {
     -webkit-border-radius: 0 5px 0 0;
     -moz-border-radius: 0 5px 0 0;
     border-radius: 0 5px 0 0;
 }
 
-table tbody tr:last-child td:first-child {
+table tbody tr:last-child td:first-child   {
     -webkit-border-radius: 0 0 0 5px;
     -moz-border-radius: 0 0 0 5px;
     border-radius: 0 0 0 5px;
@@ -188,10 +205,5 @@ table tbody tr:last-child td:last-child {
 
 
 tr.content:hover {
-    background-color: peachpuff;
-}
-
-.tables {
-    display: flex;
-    justify-content: space-between;
+    background-color: #f2d0f1d7;
 }
